name: hxlogo
version: 0.1
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: COPYING
copyright: Copyright © 2010 Bart Massey
author: Bart Massey
maintainer: bart@cs.pdx.edu
stability: alpha
homepage: http://wiki.cs.pdx.edu/bartforge/hxlogo
package-url: http://wiki.cs.pdx.edu/cabal-packages/hxlogo-0.1.tar.gz
data-files: README
synopsis: Command-line spelling word suggestion tool
description: 

    "hxlogo" is a Haskell re-implementation / transcription
    of the venerable xlogo program atop the XHB X Haskell
    Binding library. It serves as an example of XHB use, as
    an example of some X programming ideas, and as a source
    for some X convenience routines.

category: Graphics, Application
tested-with: GHC == 6.12.1

Executable hxlogo
  main-is: hxlogo.hs
  build-depends: base >= 4.2 && < 5

Executable test-polyutils
  main-is: test-polyutils.hs
  build-depends: base >= 4.2 && < 5
