-- Copyright © 2010 Bart Massey
-- This program is licensed under the "3-clause ('new') BSD License".
-- See the file COPYING in this distribution for license information.
name: hxlogo
version: 0.1.5
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: COPYING
copyright: Copyright © 2010 Bart Massey
author: Bart Massey
maintainer: bart@cs.pdx.edu
stability: alpha
homepage: http://wiki.cs.pdx.edu/bartforge/hxlogo
package-url: http://wiki.cs.pdx.edu/cabal-packages/hxlogo-0.1.4.tar.gz
data-files: README
synopsis: Haskell / XHB xlogo program plus misc XHB-related libraries.
description: 

    "hxlogo" is a Haskell re-implementation / transcription
    of the venerable xlogo program atop the XHB X Haskell
    Binding library. It serves as an example of XHB use, as
    an example of some X programming ideas, and as a source
    for some X convenience routines.

category: Graphics, Application
tested-with: GHC == 6.12.1

Executable hxlogo
  main-is: hxlogo.hs
  build-depends: base >= 4.2 && < 5, xhb >= 0.3.2009.6.28 && < 1
  ghc-options: -Wall
  other-modules:
    RenderLogo,
    Data.FixedBinary,
    Graphics.PolyUtils,
    Graphics.XHB.Utils,
    Graphics.XHB.XString

Flag BuildAll
  Description: Build test programs and everything.
  Default: False

Executable test-polyutils
  main-is: test-polyutils.hs
  build-depends: base >= 4.2 && < 5, xhb >= 0.3.2009.6.28 && < 1
  ghc-options: -Wall
  if flag(BuildAll)
    buildable: True
  else
    buildable: False
  other-modules:
    Graphics.PolyUtils

Library
  build-depends: base >= 4.2 && < 5, xhb >= 0.3.2009.6.28 && < 1
  ghc-options: -Wall
  exposed-modules:
    Data.FixedBinary,
    Graphics.PolyUtils,
    Graphics.XHB.Utils,
    Graphics.XHB.XString
